<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>WeavingRadonJava</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <pluginRepositories>
        <pluginRepository>
            <id>maven2</id>
            <url>https://repo.maven.apache.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- dockable windows -->
        <dependency>
            <groupId>io.github.andrewauclair</groupId>
            <artifactId>modern-docking-api</artifactId>
            <version>0.11.1</version>
        </dependency>
        <dependency>
            <groupId>io.github.andrewauclair</groupId>
            <artifactId>modern-docking-single-app</artifactId>
            <version>0.11.1</version>
        </dependency>
        <dependency>
            <groupId>io.github.andrewauclair</groupId>
            <artifactId>modern-docking-ui</artifactId>
            <version>0.11.1</version>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.2.5</version>
        </dependency>
        <dependency>
            <groupId>com.github.weisj</groupId>
            <artifactId>jsvg</artifactId>
            <version>1.3.0</version>
        </dependency>

        <!-- qoi image format support -->
        <dependency>
            <groupId>me.saharnooby</groupId>
            <artifactId>qoi-java</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>me.saharnooby</groupId>
            <artifactId>qoi-java-awt</artifactId>
            <version>1.2.1</version>
        </dependency>
        <!-- webp image format support -->
        <dependency>
            <groupId>org.sejda.imageio</groupId>
            <artifactId>webp-imageio</artifactId>
            <version>0.1.6</version>
        </dependency>
        <!-- vector stuff -->
        <dependency>
            <groupId>javax.vecmath</groupId>
            <artifactId>vecmath</artifactId>
            <version>1.5.2</version>
        </dependency>
    </dependencies>

</project>